test deps fix