@@ -208,8 +208,11 @@
 						<exclude>org/graphstream/ui/viewer/test/**/</exclude>
 						<exclude>**/*$*</exclude>
 					</excludes>
+				    <forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
-				<version>2.20</version>
+				<version>3.0.0-M2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
